# monzo2discord

./: .gitignore  Cargo.toml  README.md  monzo.py  pyproject.toml  requirements.txt  structures.py
HttpExample/: __init__.py  function.json
monzo2discord/: __init__.py  function.json
src/: config.rs  lib.rs  main.rs
tests/: test_oauth.py
