[package]
name = "monzo2discord"
version = "0.1.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
lazy_static = "1.4.0"
oauth2 = "3.0.0"
regex = "1.4.5"
reqwest = "0.11.2"
serde = "1.0.124"
thiserror = "1.0.24"
tokio = {version = "1.3.0", features = ["macros"]}
url = "2.2.1"
warp = "0.3.0"
