[package]
name = "monzo2discord"
version = "0.1.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dotenv = "0.15.0"
oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }
reqwest = "0.11.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1.0.124"
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = {version = "1.3.0", features = ["macros"]}
url = "2.2.1"
