[package]
name = "monzo2discord"
version = "0.1.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.48"
dotenv = "0.15.0"
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs.git", branch = "main", default-features = false }
reqwest = { version = "0.11.2", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1.0.124"
serde_json = "1.0.64"
serenity = "0.10.4"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.3.0", features = ["macros"] }
url = "2.2.1"

[dev-dependencies]
httpmock = "0.5.7"
