[tool.poetry]
name = "monzo2discord"
version = "0.1.0"
description = ""
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
